# pathtree

./: AGENTS.md  LICENSE  README.md  print_add_dialog.py  pyproject.toml
docs/: ACTIONS.md  ARCHITECTURE.md  DATABASE.md  FEATURES.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_PLAN_0.0.2.md  KEYBINDINGS.md  NODE_TYPES.md  PLUGINS.md  ROADMAP.md  SECURITY.md  SHELL.md  UI.md  UX_IDEAS.md  VISION.md
scripts/: check.sh
shell/: pathtree.bash  pathtree.zsh
src/pathtree/: __init__.py  app.py
src/pathtree/actions/: __init__.py  base.py  directory.py  executable.py  file.py  registry.py  script.py  url.py
src/pathtree/database/: __init__.py  connection.py  errors.py  repository.py
src/pathtree/models/: __init__.py  node.py  pin.py
src/pathtree/services/: __init__.py  node_service.py  pin_service.py  seed.py
src/pathtree/ui/: __init__.py  app.py  compat.py  state.py
src/pathtree/ui/dialogs/: __init__.py  action_menu.py  add_node.py  confirm_delete.py  edit_node.py  (+1 more)
src/pathtree/utils/: icons.py  launcher.py  path.py  script_resolver.py
tests/: conftest.py  test_action_menu.py  test_actions.py  test_activation.py  test_autocomplete_fixed.py  test_autocomplete_vim.py  test_cli.py  test_database.py  test_executable.py  test_file_actions.py  test_history_input.py  test_icon_registry.py  test_icons.py  test_migration_v2.py  test_mouse_interaction.py  test_path_autocomplete_context.py  test_pin_service.py  test_pins_tui.py  test_regression_hotfix.py  test_script.py  test_services.py  test_shell.py  test_ui.py  test_ui_state.py  test_url.py  test_workspace_spacing.py
(+8 files in other folders)
