[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pathtree"
version = "0.0.1"
description = "A keyboard-first terminal path manager with tree navigation and shell integration."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "sqlmodel>=0.0.22",
    "textual>=1.0.0",
    "platformdirs",
]

[project.scripts]
pathtree = "pathtree.app:main"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/pathtree"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C4", "RUF"]
